objects/ssot__ChannelEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BulkEmailMessageId__c</fullName>
        <label>Bulk Email Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementNumber__c</fullName>
        <label>Channel Engagement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationId__c</fullName>
        <label>Conversation</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSource__c</fullName>
        <label>Data Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessageId__c</fullName>
        <label>Email Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowElementId__c</fullName>
        <label>Flow Element</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Channel Engagement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InPersonMeetingId__c</fullName>
        <label>In Person Meeting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MailLetterId__c</fullName>
        <label>Mail Letter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketAudienceId__c</fullName>
        <label>Market Audience</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketJourneyActivityId__c</fullName>
        <label>Market Journey Activity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketSegmentId__c</fullName>
        <label>Market Segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MessagePurpose__c</fullName>
        <label>Message Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SocialMessageId__c</fullName>
        <label>Social Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplication__c</fullName>
        <label>Software Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallId__c</fullName>
        <label>Voice Call</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722505343_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChannelEngagement_MarketJourneyActiv_rel</label>
        <referenceTo>ssot__MarketJourneyActivity__dlm</referenceTo>
        <relationshipLabel>ChannelEngagement_MarketJourneyActiv_rel</relationshipLabel>
        <relationshipName>rel_1716722505343_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722506694_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChannelEngagement_MarketSegmentId_ma_rel</label>
        <referenceTo>ssot__MarketSegment__dlm</referenceTo>
        <relationshipLabel>ChannelEngagement_MarketSegmentId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716722506694_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722521406_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChannelEngagement_CampaignId_map_Cam_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>ChannelEngagement_CampaignId_map_Cam_rel</relationshipLabel>
        <relationshipName>rel_1716722521406_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>